- added signup banner fixes for sticky position and left aligned text

--- a/src/components/signupBanner/SignupBanner.scss
+++ b/src/components/signupBanner/SignupBanner.scss
@@ -27,6 +27,7 @@
 	}
 	.textTag {
 		color: #ffffff;
+		text-align: center;
 	}
 }
 
@@ -34,7 +35,6 @@
 	.rsSignupBanner {
 		margin: 20px 10px;
 		height: 150px;
-		position: sticky;
 		gap: 15px;
 		bottom: 10px;
 		background: url('https://image.redskytech.io/AboutSpireSignUp/resort-slide_FDIu1DISy.png?th=h-200');
